--- a/examples/tutorial.ipynb
+++ b/examples/tutorial.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,6 +290,7 @@
     "    def __getitem__(self, index):\n",
     "        data = torch.tensor(self.X[index]).float()\n",
     "        labels = torch.tensor(self.Y[index]).float()\n",
+    "        print(data.shape, labels.shape)\n",
     "        return data, labels"
    ]
   },
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,6 +335,26 @@
     "train_set = CustomDataset(X=X_train, Y=Y_train)\n",
     "val_set = CustomDataset(X=X_val, Y=Y_val)\n",
     "test_set = CustomDataset(X=X_test, Y=Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 3, 32, 32]) torch.Size([20, 3, 32, 32])\n",
+      "torch.Size([10, 3, 32, 32])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tr in train_set:\n",
+    "    print(tr[0].shape)\n",
+    "    break"
    ]
   },
   {
@@ -1139,7 +1160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
