Added TimeSformer; Seems to be working

--- a/explore_predictions.ipynb
+++ b/explore_predictions.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
     "mask = load_tif_image('data/IBAMA_INPE/1K/tiff_filled/mask.tif')\n",
     "mask = mask[:deter_img.shape[1], :deter_img.shape[2]]\n",
     "\n",
-    "deter_img[:, mask == 0] = -1\n",
+    "# deter_img[:, mask == 0] = -1\n",
     "# deter_img[deter_img > 0] = 1\n",
     "deter_img_test = deter_img[(96 + 48):(96 + 48 + 48)]\n",
     "del deter_img"
@@ -707,53 +707,6 @@
     "print(len(def_indexes))\n",
     "print(len(def_means))\n",
     "print(def_indexes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[38588 38408 38630 38632 38820 38776 38456 38976 39061 39062 38822 38723\n",
-      " 38674 38543 38266 38175 38174 37208 37566 37565 37405 37404 37207 36700\n",
-      " 36701 37121 37120 36895 36896 39022 38821 38583 38582 39460 38726 38719\n",
-      " 38580 39459 38778 38455 38585 39021 38777 37304 37303 37081 36719 36714\n",
-      " 36718 37082 38631 38975 39413 38577 39414 38541 38399 38587 38535 38398\n",
-      " 38721 37162 36715 36706 37177 36705 37176 37163 38824 38724 38725 38586\n",
-      " 38542 37718 36846 36847 37717 38823 38767 38768 38534 37170 36760 37171\n",
-      " 38720 38412 38413 38643 38642 37671 37672 37673 37674 37073 37074 38579\n",
-      " 38774 38578 38773 36762 36761]\n",
-      "[0.0010213  0.0010213  0.0010213  0.0010213  0.0010213  0.0011672\n",
-      " 0.0011672  0.0011672  0.0011672  0.0011672  0.0011672  0.0013131\n",
-      " 0.0013131  0.0013131  0.0013131  0.0013131  0.0013131  0.001321\n",
-      " 0.001321   0.001321   0.001321   0.001321   0.001321   0.001321\n",
-      " 0.001321   0.001321   0.001321   0.001321   0.001321   0.001459\n",
-      " 0.001459   0.001459   0.001459   0.0016049  0.0016049  0.0016049\n",
-      " 0.0016049  0.0016049  0.0017508  0.0017508  0.0017508  0.0018967\n",
-      " 0.0018967  0.00198151 0.00198151 0.00198151 0.00198151 0.00198151\n",
-      " 0.00198151 0.00198151 0.0020426  0.0020426  0.0020426  0.0020426\n",
-      " 0.0020426  0.0021885  0.0024803  0.0024803  0.0026262  0.0026262\n",
-      " 0.0026262  0.00264201 0.00264201 0.00264201 0.00264201 0.00264201\n",
-      " 0.00264201 0.00264201 0.0027721  0.0027721  0.0030639  0.0032098\n",
-      " 0.0032098  0.00330251 0.00330251 0.00330251 0.00330251 0.0035016\n",
-      " 0.0035016  0.0035016  0.0035016  0.00396301 0.00396301 0.00396301\n",
-      " 0.00423111 0.00423111 0.00437701 0.00481471 0.00539831 0.00594452\n",
-      " 0.00594452 0.00594452 0.00594452 0.00594452 0.00594452 0.00685731\n",
-      " 0.00700321 0.00744091 0.00787861 0.01056803 0.01453104]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# sort def_indexes by def_means\n",
-    "def_indexes = np.array(def_indexes)\n",
-    "def_means = np.array(def_means)\n",
-    "def_indexes = def_indexes[np.argsort(def_means)]\n",
-    "print(def_indexes)\n",
-    "print(def_means[np.argsort(def_means)])"
    ]
   },
   {
